# projD

./: CMakeLists.txt  projd.cpp
include/projD/: projD_global.h  projd.h
src/: CMakeLists.txt  projd.cpp
